--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tuai",
-  "version": "1.0.1",
   "description": "Asynchronous request–response iframe messaging",
+  "private": false,
+  "version": "1.0.1",
   "author": "Bjorn Krols (https://byteboomers.com)",
   "license": "MIT",
   "keywords": [
@@ -25,6 +26,7 @@
   "scripts": {
     "build": "webpack --mode production --progress"
   },
+  "husky": {},
   "dependencies": {
     "@babel/runtime": "^7.4.4",
     "nanoid": "^2.0.1"
@@ -36,5 +38,6 @@
     "babel-loader": "^8.0.6",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
-  }
+  },
+  "peerDependencies": {}
 }
