--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
   },
   "main": "dist/tuai.js",
   "scripts": {
-    "build": "webpack --mode production --progress"
+    "build": "webpack --mode production --progress",
+    "prettier": "prettier --write **/*.js **/*.json **/*.yml **/*.md"
   },
-  "husky": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "nanoid": "^2.0.3"
@@ -36,6 +41,8 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
   },
